[package]
name = "lichess-utils"
version = "0.1.0"
authors = ["Charles Black <18634426+charlesoblack@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pgn-reader = "0.18.0"
csv = "1.1.6"
serde = { version = "1.0", features = ["derive"] }
regex = "1"
